  * [RSRParsers] Removed attribute sistem from RSRParser  
  * [RSRParsers] Added grave accent(`) char as a delimiter to not split tge RSR value
  * [SessionS] Rename from ResourceMessage to ResourceAllocation
  * [AgentS] Correctly verify flags for setting max usage in ProcessEvent

 -- DanB <danb@cgrates.org>  Tue, 12 May 2020 13:08:15 +0300

cgrates (0.10.1) UNRELEASED; urgency=medium

  * [FilterS] Removed rals_conns in favor of reading the account
    directly from DataDB
  * [SessionS] Added check for missing CGRevent
  * [DiameterAgent] Using String function from diam.Message instead of
    ToJSON for request String method
  * [DiameterAgent] Updated 3gp_vendor dictionary
  * [Templates] Added new dataconverter: *ip2hex
  * [AgentS] Added support for *group type and correctly overwrite
    the values in case of *variable
  * [ERs] Correctly populate ConcurrentRequest from config in
    EventReader
  * [SupplierS] In case of missing usage from Event use 1 minute as
    default value
  * [DataDB] Mongo support different marshaler than msgpack
  * [ConnManager] Fixed rpc_conns handling id with two connections and one of
    it *internal
  * [Replicator] Added Limit and StaticTTL otions for Items from
    DataDB/StorDB
  * [Migrator] Auto discover tenant from key instead of taking it from config
  * [Templates] Fixed missing "*" for strip and padding strategy
  * [SessionS] Update subflags for *rals ( *authorize and *initiate )
  * [AgentRequest] Improved NavigableMap
  * [AgentRequest] FieldAsInterface return Data instead of NMItem
  * [SupplierS] Allow multiple suppliers with the same ID
  * [Engine] Skip caching if limit is 0
  * [CacheS] Avoid long recaching
  * [SessionS] Use correctly SessionTTLUsage when calculate end usage in case of terminate session from ttl mechanism
  * [SessionS] Add SessionTLLLastUsage as option for an extra debit in case of ttl mechanism
  * [Templates] Added new dataconverter: *string2hex
